--- a/css/jquery-alert.css
+++ b/css/jquery-alert.css
@@ -50,6 +50,13 @@
     -webkit-transform: translate3D(0,0,0);
     -moz-transform: translate3D(0,0,0);
 }
+.x-close-icon{
+    position: absolute;
+    top:10px;
+    right: 10px;
+    width: 11px;
+    cursor: pointer;
+}
 .alert-title{
     margin-bottom: 24px;
     line-height: 18px;
